# safe/models/__init__.py
@@ -3,6 +3,7 @@ from safe.models.backlog import Feature, FeatureStatus, Story, StoryStatus
 from safe.models.base import SAFeBaseModel
 from safe.models.capacity_plan import CapacityPlan
 from safe.models.dependency import Dependency, DependencyStatus
+from safe.models.improvement_action import ImprovementAction, ImprovementActionStatus
 from safe.models.objectives import PIObjective
 from safe.models.pi import PI, Iteration, PIStatus
 from safe.models.risk import Risk, ROAMStatus
@@ -24,4 +25,6 @@ __all__ = [
     "Dependency",
     "DependencyStatus",
     "CapacityPlan",
+    "ImprovementAction",
+    "ImprovementActionStatus",
 ]
